--- a/src/app/modules/order/delivery-address/delivery-address.component.sass
+++ b/src/app/modules/order/delivery-address/delivery-address.component.sass
@@ -10,8 +10,13 @@
 .delivery-address-form
   margin-top: 3%
 
+.button
+  margin-top: 3%
+
+.button>button
+  min-width: 200px
+
 .continue-button
-  margin-top: 1%
   float: right
 
 .house-number
