--- a/src/app/modules/order/details/details.component.html
+++ b/src/app/modules/order/details/details.component.html
@@ -77,7 +77,8 @@
       <small class="form-text text-muted">(Optional)</small>
     </div>
     <div class="row">
-      <div class="continue-button col">
+      <div class="button col">
+        <button type="button" class="cancel-button btn btn-danger" (click)='removeOrder()'>Cancel</button>
         <button type="submit" class="continue-button btn btn-success">Continue</button>
     </div>
     </div>
