--- a/src/app/modules/order/details/details.component.sass
+++ b/src/app/modules/order/details/details.component.sass
@@ -24,6 +24,11 @@
 .additional-info-div
   padding-top: 3%
 
+.button
+  margin-top: 3%
+
+.button>button
+  min-width: 200px
+
 .continue-button
-  margin-top: 1%
   float: right
