--- a/src/app/modules/order/payment/payment.component.html
+++ b/src/app/modules/order/payment/payment.component.html
@@ -21,10 +21,10 @@
         </div>
       </div>
       <div class="row">
-        <div class="continue-button col">
+        <div class="button col">
+          <button type="button" class="cancel-button btn btn-danger" (click)='removeOrder()'>Cancel</button>
           <button type="submit" class="continue-button btn btn-success">Continue</button>
       </div>
-
       </div>
     </form>
   </div>
