--- a/src/app/modules/order/payment/payment.component.sass
+++ b/src/app/modules/order/payment/payment.component.sass
@@ -14,8 +14,13 @@
   padding-top: 3%
   float: right
 
+.button
+  margin-top: 3%
+
+.button>button
+  min-width: 200px
+
 .continue-button
-  margin-top: 1%
   float: right
 
 
