--- a/src/app/modules/order/summary/summary.component.sass
+++ b/src/app/modules/order/summary/summary.component.sass
@@ -18,9 +18,8 @@
   margin-top: 1%
   padding: 1.5%
 
-.continue-button
-  margin-top: 1%
-  float: right
+.total-price
+  padding-top: 2%
 
 .param-name
   width: 100px
@@ -37,8 +36,13 @@
 .summary-component-button
   width: 150px
 
-.total-price
-  padding-top: 3%
+.button
+  margin-top: 3%
+
+.button>button
+  min-width: 200px
+
+.continue-button
   float: right
 
 
