--- a/src/app/modules/order/summary/summary.component.html
+++ b/src/app/modules/order/summary/summary.component.html
@@ -43,7 +43,7 @@
             <tr>
               <td>Delivery</td>
               <td></td>
-              <td>{{deliveryPrice.amount}} {{deliveryPrice.currency}}</td>
+              <td>{{deliveryPrice.amount | number:'1.2-2'}} {{deliveryPrice.currency}}</td>
             </tr>
           </tbody>
         </table>
@@ -122,8 +122,9 @@
     </div>
     </div>
     <div class="row">
-      <div class="continue-button col">
-        <button type="submit" class="continue-button btn btn-success" (click)="validateOrder()">Continue</button>
+      <div class="button col">
+        <button type="button" class="cancel-button btn btn-danger" (click)='removeOrder()'>Cancel</button>
+        <button type="button" class="continue-button btn btn-success" (click)="validateOrder()">Continue</button>
     </div>
   </div>
 </div>
