Minor fixes to account related components due to improved knowledge in Angular

--- a/src/app/modules/profile/manage-details/manage-details.component.html
+++ b/src/app/modules/profile/manage-details/manage-details.component.html
@@ -1,7 +1,4 @@
 <form class="accountForm" name="form" #f="ngForm" (ngSubmit)="f.form.valid && updateInformations()">
-
-  <p>{{message}}</p>
-
   <div class="form-group account-details-form">
     <label for="RegisterEmail">Email address</label>
     <input type="email"
@@ -20,5 +17,5 @@
     </div>
   </div>
   </div>
-  <button type="submit" class="btn btn-primary submit-button">Submit</button>
+  <button type="submit" class="btn btn-success submit-button w-100">Submit</button>
 </form>
