--- a/src/app/modules/profile/profile.component.html
+++ b/src/app/modules/profile/profile.component.html
@@ -1,5 +1,5 @@
 <div class="nav flex-column nav-pills profile-navigator " role="tablist" aria-orientation="vertical">
-  <a class="nav-link border border-success" [routerLink] = "['manage-details']" routerLinkActive="active bg-success">Edit details</a>
+  <a class="nav-link border border-success" [routerLink] = "['manage-details']" routerLinkActive="active bg-success border-dark">Edit details</a>
   <a class="nav-link border border-success border-top-0 border-bottom-0" [routerLink] = "['change-password']" routerLinkActive="active bg-success">Change password</a>
   <a class="nav-link border border-success" [routerLink] = "['delete']" routerLinkActive="active bg-success">Delete Account</a>
 </div>
