--- a/src/app/modules/profile/profile.component.sass
+++ b/src/app/modules/profile/profile.component.sass
@@ -1,10 +1,13 @@
+.border
+  border-width: thin medium !important
+
 .profile-navigator
     width: 20%
     float: left
     margin-left: -25%
 
 /* Extra small devices (phones, up to 480px) */
-@media screen and (max-width: 767px) 
+@media screen and (max-width: 767px)
     .profile-navigator
         float: none
         width: 100%
@@ -17,7 +20,7 @@
 
 
 /* Small devices (tablets, 768px and up) */
-@media (min-width: 768px) and (max-width: 991px) 
+@media (min-width: 768px) and (max-width: 991px)
     .profile-navigator
         width: 25%
         margin-left: 0%
@@ -27,13 +30,13 @@
         margin-left: 0%
 
 /* tablets/desktops and up ----------- */
-@media (min-width: 1451px) and (max-width: 1676px) 
+@media (min-width: 1451px) and (max-width: 1676px)
     .profile-navigator
         margin-left: -15%
 
 /* large desktops and up ----------- */
-@media screen and (min-width: 1200px) 
+@media screen and (min-width: 1200px)
     .profile-navigator
         width: 25%
-        
+
 
