--- a/src/app/modules/account/register/register.component.html
+++ b/src/app/modules/account/register/register.component.html
@@ -6,7 +6,7 @@
           class="form-control"
           id="RegisterLogin"
           aria-describedby="RegisterLoginHelp"
-          name="name" 
+          name="name"
           [(ngModel)]="model.name"
           #name="ngModel"
           [ngClass]="{ 'is-invalid': f.submitted && name.invalid }"
@@ -68,5 +68,5 @@
     <div class="small text-danger" *ngIf="f.submitted && !checkBoxValue">*required</div>
 
   </div>
-  <button type="submit" class="btn btn-primary submit-button">Submit</button>
+  <button type="submit" class="btn btn-success submit-button">Submit</button>
 </form>
