--- a/src/app/modules/profile/change-password/change-password.component.html
+++ b/src/app/modules/profile/change-password/change-password.component.html
@@ -2,7 +2,7 @@
 
   <div class="form-group">
     <label for="passwordOld">Current Password</label>
-    <input type="password" 
+    <input type="password"
            class="form-control"
            id="passwordOld"
            name="passwordOld"
@@ -11,10 +11,10 @@
            required>
 	<div class="text-danger" *ngIf="f.submitted && password.invalid"> Password can not be empty</div>
   </div>
-  
+
 	<div class="form-group">
     <label for="newPassword">New password</label>
-    <input type="password" 
+    <input type="password"
            class="form-control"
            id="newPassword"
            name="newPassword"
@@ -31,7 +31,7 @@
 
 	  <div class="form-group">
     <label for="newPassConfirm">Confirm the new password</label>
-    <input type="password" 
+    <input type="password"
            class="form-control"
            id="newPassConfirm"
            name="newPassConfirm"
@@ -43,6 +43,6 @@
    </div>
   </div>
 
-  <button type="submit" class="btn btn-primary submit-button">Update</button>
+  <button type="submit" class="btn btn-success submit-button w-100">Update</button>
 
 </form>
