--- a/src/app/modules/profile/delete/delete.component.html
+++ b/src/app/modules/profile/delete/delete.component.html
@@ -2,7 +2,7 @@
 
   <div class="form-group">
     <label for="passwordInput">Password</label>
-    <input type="password" 
+    <input type="password"
            class="form-control"
            id="passwordInput"
            [(ngModel)]="modelPassword"
@@ -13,5 +13,5 @@
       <div class="text-danger" *ngIf="f.submitted && password.invalid"> Password can not be empty</div>
     </div>
   </div>
-  <button type="submit" class="btn btn-primary submit-button">Delete</button>
+  <button type="submit" class="btn btn-success submit-button w-100">Delete</button>
 </form>
