Finish user order displaying

--- a/src/app/modules/profile/display-orders/display-orders.component.html
+++ b/src/app/modules/profile/display-orders/display-orders.component.html
@@ -1,10 +1,45 @@
-<div>
-  <ngb-pagination class="d-flex justify-content-center"
-                  [boundaryLinks]="true"
-                  [collectionSize]="70"
-                  [directionLinks]="true"
-                  [maxSize]="10"
-                  [pageSize]="12"
-                  [rotate]="true"
-                  ></ngb-pagination>
+<div class="container content w-100">
+  <div>
+    <ngb-pagination class="d-flex justify-content-center" *ngIf="dataLoaded"
+                    [boundaryLinks]="true"
+                    [collectionSize]="collectionSize"
+                    [directionLinks]="true"
+                    [maxSize]="8"
+                    [pageSize]="pageSize"
+                    [rotate]="true"
+                    (pageChange)="retrieveOrdersPage(page)"
+                    ></ngb-pagination>
+  </div>
+  <div class="row justify-content-center" *ngIf="!dataLoaded">
+    <div class="spinner-border text-success" role="status" style="width: 10rem; height: 10rem;">
+      <span class="sr-only">Loading...</span>
+    </div>
+  </div>
+  <div class="page-content w-100" *ngIf="dataLoaded">
+    <table class="table table-bordered table-hover content w-100">
+      <thead class="thead">
+        <tr>
+          <th></th>
+          <th scope="col">Order ID</th>
+          <th scope="col">Placement Date</th>
+          <th scope="col">Delivery Date</th>
+          <th scope="col">Total price</th>
+          <th scope="col">Paid</th>
+          <th scope="col">Current Status</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let order of content; let i = index" [attr.data-index]="i">
+          <td>{{(i + 1) + (page) * pageSize}}</td>
+          <td>{{order.id}}</td>
+          <td>{{order.placementDate}}</td>
+          <td>{{order.deliveryDate}}</td>
+          <td>{{order.paymentDTO.totalPrice.amount | number:'1.2-2'}} {{order.paymentDTO.totalPrice.currency}}</td>
+          <td>{{order.paymentDTO.wasPaid}}</td>
+          <td>{{order.orderStatus}}</td>
+        </tr>
+      </tbody>
+
+    </table>
+  </div>
 </div>
