--- a/src/app/modules/order/summary/summary.component.html
+++ b/src/app/modules/order/summary/summary.component.html
@@ -7,6 +7,14 @@
     Please confirm if everything in your order is correct
   </h4>
   <div id="summary">
+    <div class="row justify-content-center" *ngIf="!resourcesLoaded">
+      <div class="spinner-border text-success"  role="status" style="width: 10rem; height: 10rem;">
+        <span class="sr-only">Loading...</span>
+      </div>
+    </div>
+    <div *ngIf="resourcesLoaded">
+
+
     <div class="summary-component">
       <button type="button"
               class="summary-component-button btn btn-success"
@@ -127,4 +135,5 @@
         <button type="button" class="continue-button btn btn-success" (click)="validateOrder()">Continue</button>
     </div>
   </div>
+</div>
 </div>
