--- a/src/app/modules/products/flower/flower.component.html
+++ b/src/app/modules/products/flower/flower.component.html
@@ -1,7 +1,3 @@
-<h4 *ngIf="message !== ''">
-  Waiting for resources to load
-</h4>
-
 <div class="container" >
   <div>
     <ngb-pagination
@@ -13,7 +9,15 @@
       (pageChange)="onChangePage(page)"
     ></ngb-pagination>
   </div>
-  <div class="row products-row" *ngFor="let row of viewModel">
+
+  <div class="row justify-content-center" *ngIf="!resourcesLoaded">
+    <div class="spinner-border text-success"  role="status" style="width: 10rem; height: 10rem;">
+      <span class="sr-only">Loading...</span>
+    </div>
+  </div>
+
+<div *ngIf="resourcesLoaded">
+  <div class="row products-row"*ngFor="let row of viewModel">
     <div
       class="card products-column"
       style="width: 18rem;"
@@ -43,6 +47,7 @@
       </div>
     </div>
   </div>
+</div>
   <div>
     <ngb-pagination
       class="d-flex justify-content-center "
