--- a/src/app/modules/profile/profile.component.sass
+++ b/src/app/modules/profile/profile.component.sass
@@ -22,8 +22,15 @@
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) and (max-width: 991px)
     .profile-navigator
-        width: 25%
+        float: none
+        width: 100%
+        padding: 5px !important
+        text-align: center
+        margin-bottom: 50px
         margin-left: 0%
+    .nav-link
+        padding: 5px
+
 
 @media (min-width: 991px) and (max-width: 1450px)
     .profile-navigator
