--- a/src/app/modules/shopping-cart/shopping-cart.component.html
+++ b/src/app/modules/shopping-cart/shopping-cart.component.html
@@ -2,8 +2,10 @@
   <h2>Current items in shopping cart:</h2>
 </div>
 
-<div *ngIf = "message !== ''">
-  <h4>{{ message }}</h4>
+<div class="row justify-content-center" *ngIf="!dataLoaded">
+  <div class="spinner-border text-success" role="status" style="width: 10rem; height: 10rem;">
+    <span class="sr-only">Loading...</span>
+  </div>
 </div>
 
 <div class="card" *ngIf="shoppingCart != null && shoppingCart.flowerOrderDTOs.length > 0 ">
