--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -24,7 +24,7 @@
       <li class="nav-item" *ngIf="authenticationGuard.isAuthenticated()">
         <a class="nav-item nav-link" routerLink="/shopping-cart">Shopping Cart</a>
       </li>
-			<li class="nav-item" *ngIf="authenticationGuard.canActivateLogin('account')">
+			<li class="nav-item" *ngIf="!loginGuard.isLogged()">
 				<a class="nav-item nav-link" routerLink="/account/login">Login</a>
 			</li>
 			<li class="nav-item" *ngIf="authenticationGuard.isAuthenticated()" >
