--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -21,6 +21,10 @@
 	  </div>
 	<div class = "account-options">
 		<ul class="navbar-nav">
+      <li class="nav-item" *ngIf="adminGuard.isAdmin()">
+        <a class="nav-item nav-link" routerLink="/admin">Admin Page</a>
+        <li class="nav-item" *ngIf="employeeGuard.isEmployee() || adminGuard.isAdmin()">
+          <a class="nav-item nav-link" routerLink="/employee">Employee Page</a>
       <li class="nav-item" *ngIf="authenticationGuard.isAuthenticated()">
         <a class="nav-item nav-link" routerLink="/shopping-cart">Shopping Cart</a>
       </li>
