Add product image url transfering and displaying, improve pagination navigators, and product displaying

--- a/src/app/modules/products/occasional-article/occasional-article.component.sass
+++ b/src/app/modules/products/occasional-article/occasional-article.component.sass
@@ -6,3 +6,12 @@
 /* Override pagination navigator background colour */
 ngb-pagination ::ng-deep ul > li.active > a
   background-color: #1e7e34 !important
+
+.title
+  max-height: 100px
+
+.description
+  min-height: 200px
+
+.price
+  padding-top: 6px
