--- a/src/app/modules/profile/display-orders/display-orders.component.html
+++ b/src/app/modules/profile/display-orders/display-orders.component.html
@@ -5,6 +5,7 @@
                     [collectionSize]="collectionSize"
                     [directionLinks]="true"
                     [maxSize]="8"
+                    [ellipses]="false"
                     [pageSize]="pageSize"
                     [rotate]="true"
                     (pageChange)="retrieveOrdersPage(page)"
