--- a/src/app/modules/products/occasional-article/occasional-article.component.html
+++ b/src/app/modules/products/occasional-article/occasional-article.component.html
@@ -5,6 +5,9 @@
       size="lg"
       [(page)]="page"
       [pageSize]="pageSize"
+      [maxSize]="5"
+      [rotate]="true"
+      [ellipses]="false"
       [collectionSize]="collectionSize"
       (pageChange)="onChangePage(page)"
     ></ngb-pagination>
@@ -20,31 +23,31 @@
   <div class="row products-row" *ngFor="let row of viewModel">
     <div
       class="card products-column"
-      style="width: 18rem;"
+      style="width: 20rem;"
       *ngFor="let product of row"
     >
       <img
         class="card-img-top"
-        src="https://i.etsystatic.com/8134248/r/il/d5eb3a/1168097200/il_570xN.1168097200_5r0l.jpg"
+        src="{{product.imageMedium}}"
         alt="Card image cap"
       />
-      <div class="card-body">
+      <div class="card-body title">
         <h5 class="card-title">{{ product.name }}</h5>
         <p class="card-text ">
           <small>ID: {{ product.id }} </small>
         </p>
       </div>
-      <ul class="list-group list-group-flush">
+      <ul class="list-group list-group-flush description">
         <li class="list-group-item">Theme: {{ product.theme }}</li>
         <li class="list-group-item">{{ product.description }}</li>
       </ul>
       <div class="card-body">
-        <p class="price">
+        <p class="price float-left">
           {{ product.price.amount }} {{ product.price.currency }}
-          <button type="button" class="btn btn-success float-right" *ngIf="authenticationGuard.isAuthenticated()" (click)="addToShoppingCart(product.id)">
-            Add to cart
-          </button>
         </p>
+        <button type="button" class="btn btn-success float-right" *ngIf="authenticationGuard.isAuthenticated()" (click)="addToShoppingCart(product.id)">
+          Add to cart
+        </button>
       </div>
     </div>
   </div>
@@ -55,6 +58,9 @@
       size="lg"
       [(page)]="page"
       [pageSize]="pageSize"
+      [maxSize]="5"
+      [rotate]="true"
+      [ellipses]="false"
       [collectionSize]="collectionSize"
       (pageChange)="onChangePage(page)"
     ></ngb-pagination>
