--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -5,9 +5,9 @@
 
 .content
   position: relative
-  height: auto
-  min-height: 100%
+  min-height: 90vh
   width: 100%
 
 .footer
   margin-top: 50px
+ 
