--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -1,43 +1,79 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-success">
-  <a class="navbar-brand text-light font-weight-bold" routerLink = "">Flower Shop</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <a class="navbar-brand text-light font-weight-bold" routerLink=""
+    >Flower Shop</a
+  >
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-toggle="collapse"
+    data-target="#navbarNav"
+    aria-controls="navbarNav"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
-	  <div>
-		<ul class="navbar-nav">
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Browse Products
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" routerLink="/products/flower">Flowers</a>
-          <a class="dropdown-item" routerLink="/products/occasional-article">Occasional Articles</a>
-          <a class="dropdown-item" routerLink="/products/souvenir">Souvenirs</a>
-          <a class="dropdown-item" routerLink="/products/bouquet">Bouquets</a>
-        </div>
-      </li>
-		</ul>
-	  </div>
-	<div class = "account-options">
-		<ul class="navbar-nav">
-      <li class="nav-item" *ngIf="adminGuard.isAdmin()">
-        <a class="nav-item nav-link" routerLink="/admin">Admin Page</a>
-        <li class="nav-item" *ngIf="employeeGuard.isEmployee() || adminGuard.isAdmin()">
+    <div>
+      <ul class="navbar-nav">
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle"
+            href=""
+            id="navbarDropdownMenuLink"
+            role="button"
+            data-toggle="dropdown"
+            aria-haspopup="true"
+            aria-expanded="false"
+          >
+            Browse Products
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" routerLink="/products/flower">Flowers</a>
+            <a class="dropdown-item" routerLink="/products/occasional-article"
+              >Occasional Articles</a
+            >
+            <a class="dropdown-item" routerLink="/products/souvenir"
+              >Souvenirs</a
+            >
+            <a class="dropdown-item" routerLink="/products/bouquet">Bouquets</a>
+          </div>
+        </li>
+      </ul>
+    </div>
+    <div class="account-options">
+      <ul class="navbar-nav">
+        <li class="nav-item" *ngIf="adminGuard.isAdmin()">
+          <a class="nav-item nav-link" routerLink="/admin">Admin Page</a>
+        </li>
+
+        <li
+          class="nav-item"
+          *ngIf="employeeGuard.isEmployee() || adminGuard.isAdmin()"
+        >
           <a class="nav-item nav-link" routerLink="/employee">Employee Page</a>
-      <li class="nav-item" *ngIf="authenticationGuard.isAuthenticated()">
-        <a class="nav-item nav-link" routerLink="/shopping-cart">Shopping Cart</a>
-      </li>
-			<li class="nav-item" *ngIf="!loginGuard.isLogged()">
-				<a class="nav-item nav-link" routerLink="/account/login">Login</a>
-			</li>
-			<li class="nav-item" *ngIf="authenticationGuard.isAuthenticated()" >
-				<a class="nav-item nav-link" routerLink="/profile">Profile</a>
-			</li>
-			<li class="nav-item" *ngIf="authenticationGuard.isAuthenticated()" >
-				 <a class="nav-item nav-link" [routerLink]="" (click)="authenticationService.logout()">Logout</a>
-			</li>
-		</ul>
-	</div>
+        </li>
+
+        <li class="nav-item" *ngIf="authenticationGuard.isAuthenticated()">
+          <a class="nav-item nav-link" routerLink="/shopping-cart"
+            >Shopping Cart</a
+          >
+        </li>
+        <li class="nav-item" *ngIf="!loginGuard.isLogged()">
+          <a class="nav-item nav-link" routerLink="/account/login">Login</a>
+        </li>
+        <li class="nav-item" *ngIf="authenticationGuard.isAuthenticated()">
+          <a class="nav-item nav-link" routerLink="/profile">Profile</a>
+        </li>
+        <li class="nav-item" *ngIf="authenticationGuard.isAuthenticated()">
+          <a
+            class="nav-item nav-link"
+            [routerLink]=""
+            (click)="authenticationService.logout()"
+            >Logout</a
+          >
+        </li>
+      </ul>
+    </div>
   </div>
 </nav>
