--- a/src/app/shared/navigation/navigation.component.sass
+++ b/src/app/shared/navigation/navigation.component.sass
@@ -2,3 +2,30 @@
 	position: relative
 	margin-right: 1% !important
 	margin: auto
+
+@media screen and (max-width: 767px)
+	.navbar-nav, .dropdown-item
+		font-size: 0.7rem
+	.nav-link
+		padding-top: 0.250em
+		padding-bottom: 0.250em
+		
+
+@media (min-width: 768px) and (max-width: 991px)
+	.navbar-nav
+		font-size: 0.8rem
+	.nav-link
+		padding-top: 0.250em
+		padding-bottom: 0.250em
+
+@media (min-width: 991px) and (max-width: 1450px)
+	.navbar-nav
+		font-size: 0.8em
+
+@media (min-width: 1451px) and (max-width: 1676px)
+	.navbar-nav
+		font-size: 0.9em
+
+@media screen and (min-width: 1200px)
+	.navbar-nav
+		font-size: 1em
