Improve products displaying and smaller screens compatibility, improve code quality, fix array utiliies invalid functions

--- a/src/app/modules/employee/employee.component.sass
+++ b/src/app/modules/employee/employee.component.sass
@@ -43,7 +43,8 @@
         margin-left: -15%
 
 
-@media screen and (min-width: 1200px)
+/* large desktops and up ----------- */
+@media screen and (min-width: 1677px)
     .navigator
         font-size: 1em
         width: 25%
