--- a/src/app/modules/employee/order-administration/order-administration.component.sass
+++ b/src/app/modules/employee/order-administration/order-administration.component.sass
@@ -49,7 +49,8 @@ ngb-pagination ::ng-deep ul > li.active > a
         font-size: 1em
         line-height: 1.25
 
-@media screen and (min-width: 1200px)
+/* large desktops and up ----------- */
+@media screen and (min-width: 1677px)
     .table-content
         font-size: 1rem
     .table-content>tbody>tr>td
