--- a/src/app/modules/products/products.component.sass
+++ b/src/app/modules/products/products.component.sass
@@ -1,2 +1,14 @@
 .product-content
   margin-top: 2%
+
+@media screen and (max-width: 767px)
+  .product-menu>label
+    font-size: 0.7em
+
+@media (min-width: 768px) and (max-width: 991px)
+  .product-menu>label
+    font-size: 0.85em
+
+@media (min-width: 991px) and (max-width: 1450px)
+  .product-menu>label
+    font-size: 0.925em
