Improve shopping cart and delivery address pages, add mobile compability to them

--- a/src/app/modules/order/order.component.html
+++ b/src/app/modules/order/order.component.html
@@ -1,5 +1,5 @@
-<h3>
-  <b *ngIf="message !== ''">{{message}}</b>
+<h3 class="order-message">
+  <b *ngIf="message !== ''">{{ message }}</b>
   <b *ngIf="message === ''">Just a few more steps...</b>
 </h3>
 <div class="container-fluid justify-content-center">
