--- a/src/app/modules/employee/order-administration/order-administration.component.sass
+++ b/src/app/modules/employee/order-administration/order-administration.component.sass
@@ -1,13 +1,17 @@
 ngb-pagination ::ng-deep ul > li.active > a
     background-color: #1e7e34 !important
+    
+.thead
+  color: white
+  background-color: #1e7e34 !important
    
 @media screen and (max-width: 767px)
     .table-content
-        font-size: 0.4rem
+        font-size: 0.55rem
     .table-content>tbody>tr>td
-        padding: 4px
+        padding: 2.5px
     .table-content>thead>tr>th
-        padding: 4px
+        padding: 2.5px
     ngb-pagination ::ng-deep .pagination .page-link
         padding: .25rem .5rem
         font-size: .875rem
@@ -15,11 +19,11 @@ ngb-pagination ::ng-deep ul > li.active > a
 
 @media (min-width: 768px) and (max-width: 991px)
     .table-content
-        font-size: 0.6rem
+        font-size: 0.65rem
     .table-content>tbody>tr>td
-        padding: 6px
+        padding: 4px
     .table-content>thead>tr>th
-        padding: 6px
+        padding: 4px
     ngb-pagination ::ng-deep .pagination .page-link
         padding: .25rem .5rem
         font-size: .875rem
@@ -27,7 +31,7 @@ ngb-pagination ::ng-deep ul > li.active > a
 
 @media (min-width: 991px) and (max-width: 1450px)
     .table-content
-        font-size: 0.7rem
+        font-size: 0.9rem
     .table-content>tbody>tr>td
         padding: 8px
     .table-content>thead>tr>th
@@ -39,11 +43,11 @@ ngb-pagination ::ng-deep ul > li.active > a
 
 @media (min-width: 1451px) and (max-width: 1676px)
     .table-content
-        font-size: 0.8rem
+        font-size: 0.9rem
     .table-content>tbody>tr>td
-        padding: 10px
+        padding: 8px
     .table-content>thead>tr>th
-        padding: 10px
+        padding: 8px
     ngb-pagination ::ng-deep .pagination .page-link
         padding: .5em .75em
         font-size: 1em
