--- a/src/app/modules/order/delivery-address/delivery-address.component.sass
+++ b/src/app/modules/order/delivery-address/delivery-address.component.sass
@@ -28,4 +28,24 @@
 .apartment-number
   max-width: 150px
 
+@media screen and (max-width: 767px)
+  .component-title
+    font-size: 1em
+  .delivery-address-form
+    font-size: 0.8em
+  .button>button
+    margin-top: 0.1em
+    margin-bottom: 0.1em
+    width: 100%
 
+@media (min-width: 768px) and (max-width: 991px)
+  .component-title
+    font-size: 1.2em
+
+@media (min-width: 991px) and (max-width: 1450px)
+  .component-title
+    font-size: 1.4em
+
+@media (min-width: 1451px) and (max-width: 1676px)
+  .component-title
+    font-size: 1.5em
