--- a/src/app/modules/shopping-cart/shopping-cart.component.html
+++ b/src/app/modules/shopping-cart/shopping-cart.component.html
@@ -1,14 +1,21 @@
 <div class="border-bottom border-success">
-  <h2>Current items in shopping cart:</h2>
+  <h2 class="title">Current items in shopping cart:</h2>
 </div>
 
 <div class="row justify-content-center" *ngIf="!dataLoaded">
-  <div class="spinner-border text-success" role="status" style="width: 10rem; height: 10rem;">
+  <div
+    class="spinner-border text-success"
+    role="status"
+    style="width: 10rem; height: 10rem;"
+  >
     <span class="sr-only">Loading...</span>
   </div>
 </div>
 
-<div class="card" *ngIf="shoppingCart != null && shoppingCart.flowerOrderDTOs.length > 0 ">
+<div
+  class="card"
+  *ngIf="shoppingCart != null && shoppingCart.flowerOrderDTOs.length > 0"
+>
   <div class="card-header" id="headingOne">
     <button
       class="btn btn-success"
@@ -37,18 +44,29 @@
                     <th></th>
                   </tr>
                 </thead>
-                <tbody >
+                <tbody>
                   <tr *ngFor="let flowerOrder of shoppingCart.flowerOrderDTOs">
                     <td>
-                      <img class="product-img" src="{{flowerOrder.flowerDTO.imageSmall}}"/>
+                      <img
+                        class="product-img"
+                        src="{{ flowerOrder.flowerDTO.imageSmall }}"
+                      />
                     </td>
-                    <td class="product-column">{{flowerOrder.flowerDTO.name}}</td>
                     <td class="product-column">
-                      {{flowerOrder.itemCount}}
+                      {{ flowerOrder.flowerDTO.name }}
                     </td>
-                    <td class="product-column text-right">{{flowerOrder.flowerDTO.price.amount | number:'1.2-2'}} {{flowerOrder.flowerDTO.price.currency}}</td>
+                    <td class="product-column">
+                      {{ flowerOrder.itemCount }}
+                    </td>
                     <td class="product-column text-right">
-                      <button class="btn btn-sm btn-danger" (click)="deleteFlowerOrder(flowerOrder)">
+                      {{ flowerOrder.flowerDTO.price.amount | number: '1.2-2' }}
+                      {{ flowerOrder.flowerDTO.price.currency }}
+                    </td>
+                    <td class="product-column text-right">
+                      <button
+                        class="btn btn-sm btn-danger cancel-btn"
+                        (click)="deleteFlowerOrder(flowerOrder)"
+                      >
                         <i class="fa fa-trash"></i>
                       </button>
                     </td>
@@ -63,113 +81,162 @@
   </div>
 </div>
 
-<div class="card" *ngIf="shoppingCart != null && shoppingCart.occasionalArticleOrderDTOs.length > 0">
-    <div class="card-header" id="headingOne">
-      <button
-        class="btn btn-success"
-        type="button"
-        data-toggle="collapse"
-        data-target="#collapseOccasionalArticle"
-        aria-expanded="true"
-        aria-controls="collapseOccasionalArticle"
-      >
-        Occasional Articles
-      </button>
-    </div>
-    <div class="collapse show multi-collapse" id="collapseOccasionalArticle">
-      <div class="card-body">
-        <div class="container mb-4">
-          <div class="row">
-            <div class="col-12">
-              <div class="table-responsive">
-                <table class="table table-striped">
-                  <thead>
-                    <tr>
-                      <th scope="col"></th>
-                      <th scope="col">Product</th>
-                      <th scope="col">Quantity</th>
-                      <th scope="col" class="text-right">Price</th>
-                      <th></th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr *ngFor="let occasionalArticle of shoppingCart.occasionalArticleOrderDTOs">
-                      <td>
-                        <img class="product-img" src="{{occasionalArticle.occasionalArticleDTO.imageSmall}}" />
-                      </td>
-                      <td class="product-column">{{occasionalArticle.occasionalArticleDTO.name}}</td>
-                      <td class="product-column">{{occasionalArticle.itemCount}}</td>
-                      <td class="product-column text-right">{{occasionalArticle.occasionalArticleDTO.price.amount | number:'1.2-2'}} {{occasionalArticle.occasionalArticleDTO.price.currency}}</td>
-                      <td class="product-column text-right">
-                        <button class="btn btn-sm btn-danger" (click)="deleteOccasionalArticleOrder(occasionalArticle)">
-                          <i class="fa fa-trash"></i>
-                        </button>
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
+<div
+  class="card"
+  *ngIf="
+    shoppingCart != null && shoppingCart.occasionalArticleOrderDTOs.length > 0
+  "
+>
+  <div class="card-header" id="headingOne">
+    <button
+      class="btn btn-success"
+      type="button"
+      data-toggle="collapse"
+      data-target="#collapseOccasionalArticle"
+      aria-expanded="true"
+      aria-controls="collapseOccasionalArticle"
+    >
+      Occasional Articles
+    </button>
+  </div>
+  <div class="collapse show multi-collapse" id="collapseOccasionalArticle">
+    <div class="card-body">
+      <div class="container mb-4">
+        <div class="row">
+          <div class="col-12">
+            <div class="table-responsive">
+              <table class="table table-striped">
+                <thead>
+                  <tr>
+                    <th scope="col"></th>
+                    <th scope="col">Product</th>
+                    <th scope="col">Quantity</th>
+                    <th scope="col" class="text-right">Price</th>
+                    <th></th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr
+                    *ngFor="
+                      let occasionalArticle of shoppingCart.occasionalArticleOrderDTOs
+                    "
+                  >
+                    <td>
+                      <img
+                        class="product-img"
+                        src="{{
+                          occasionalArticle.occasionalArticleDTO.imageSmall
+                        }}"
+                      />
+                    </td>
+                    <td class="product-column">
+                      {{ occasionalArticle.occasionalArticleDTO.name }}
+                    </td>
+                    <td class="product-column">
+                      {{ occasionalArticle.itemCount }}
+                    </td>
+                    <td class="product-column text-right">
+                      {{
+                        occasionalArticle.occasionalArticleDTO.price.amount
+                          | number: '1.2-2'
+                      }}
+                      {{
+                        occasionalArticle.occasionalArticleDTO.price.currency
+                      }}
+                    </td>
+                    <td class="product-column text-right">
+                      <button
+                        class="btn btn-sm btn-danger cancel-btn"
+                        (click)="
+                          deleteOccasionalArticleOrder(occasionalArticle)
+                        "
+                      >
+                        <i class="fa fa-trash"></i>
+                      </button>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
+</div>
 
-  <div class="card" *ngIf="shoppingCart != null && shoppingCart.souvenirOrderDTOs.length > 0">
-    <div class="card-header" id="headingOne">
-      <button
-        class="btn btn-success"
-        type="button"
-        data-toggle="collapse"
-        data-target="#collapseSouvenir"
-        aria-expanded="true"
-        aria-controls="collapseSouvenir"
-      >
-        Souvenirs
-      </button>
-    </div>
-    <div class="collapse show multi-collapse" id="collapseSouvenir">
-      <div class="card-body">
-        <div class="container mb-4">
-          <div class="row">
-            <div class="col-12">
-              <div class="table-responsive">
-                <table class="table table-striped">
-                  <thead>
-                    <tr>
-                      <th scope="col"></th>
-                      <th scope="col">Product</th>
-                      <th scope="col">Quantity</th>
-                      <th scope="col" class="text-right">Price</th>
-                      <th></th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr *ngFor="let souvenirOrder of shoppingCart.souvenirOrderDTOs">
-                      <td>
-
-                        <img class="product-img" src="{{souvenirOrder.souvenirDTO.imageSmall}}" />
-                      </td>
-                      <td class="product-column">{{souvenirOrder.souvenirDTO.name}}</td>
-                      <td class="product-column">{{souvenirOrder.itemCount}}</td>
-                      <td class="product-column text-right">{{souvenirOrder.souvenirDTO.price.amount | number: '1.2-2'}} {{souvenirOrder.souvenirDTO.price.currency}}</td>
-                      <td class="product-column text-right">
-                        <button class="btn btn-sm btn-danger" (click)="deleteSouvenirOrder(souvenirOrder)">
-                          <i class="fa fa-trash"></i>
-                        </button>
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
+<div
+  class="card"
+  *ngIf="shoppingCart != null && shoppingCart.souvenirOrderDTOs.length > 0"
+>
+  <div class="card-header" id="headingOne">
+    <button
+      class="btn btn-success"
+      type="button"
+      data-toggle="collapse"
+      data-target="#collapseSouvenir"
+      aria-expanded="true"
+      aria-controls="collapseSouvenir"
+    >
+      Souvenirs
+    </button>
+  </div>
+  <div class="collapse show multi-collapse" id="collapseSouvenir">
+    <div class="card-body">
+      <div class="container mb-4">
+        <div class="row">
+          <div class="col-12">
+            <div class="table-responsive">
+              <table class="table table-striped">
+                <thead>
+                  <tr>
+                    <th scope="col"></th>
+                    <th scope="col">Product</th>
+                    <th scope="col">Quantity</th>
+                    <th scope="col" class="text-right">Price</th>
+                    <th></th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr
+                    *ngFor="let souvenirOrder of shoppingCart.souvenirOrderDTOs"
+                  >
+                    <td>
+                      <img
+                        class="product-img"
+                        src="{{ souvenirOrder.souvenirDTO.imageSmall }}"
+                      />
+                    </td>
+                    <td class="product-column">
+                      {{ souvenirOrder.souvenirDTO.name }}
+                    </td>
+                    <td class="product-column">
+                      {{ souvenirOrder.itemCount }}
+                    </td>
+                    <td class="product-column text-right">
+                      {{
+                        souvenirOrder.souvenirDTO.price.amount | number: '1.2-2'
+                      }}
+                      {{ souvenirOrder.souvenirDTO.price.currency }}
+                    </td>
+                    <td class="product-column text-right">
+                      <button
+                        class="btn btn-sm btn-danger cancel-btn"
+                        (click)="deleteSouvenirOrder(souvenirOrder)"
+                      >
+                        <i class="fa fa-trash"></i>
+                      </button>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-
+</div>
 
 <div class="container mb-4">
   <div class="row">
@@ -193,7 +260,9 @@
               <td></td>
               <td></td>
               <td class="text-right">Shipping</td>
-              <td class="text-right">{{shipping.amount | number:'1.2-2'}} {{shipping.currency}}</td>
+              <td class="text-right">
+                {{ shipping.amount | number: '1.2-2' }} {{ shipping.currency }}
+              </td>
             </tr>
             <tr>
               <td></td>
@@ -201,7 +270,12 @@
               <td></td>
               <td></td>
               <td class="text-right"><strong>Total</strong></td>
-              <td class="text-right"><strong>{{totalPrice.amount | number:'1.2-2'}} {{totalPrice.currency}}</strong></td>
+              <td class="text-right">
+                <strong
+                  >{{ totalPrice.amount | number: '1.2-2' }}
+                  {{ totalPrice.currency }}</strong
+                >
+              </td>
             </tr>
           </tbody>
         </table>
@@ -209,14 +283,25 @@
     </div>
     <div class="col mb-2">
       <div class="row">
-        <div class="col-sm-12  col-md-6">
-            <button class="btn btn-block btn-info" [routerLink]="'/products/flower'"  >
-              Continue Shopping
-            </button>
+        <div class="col-sm-12 col-md-6">
+          <button
+            class="btn btn-block btn-info cart-button"
+            [routerLink]="'/products/flower'"
+          >
+            Continue Shopping
+          </button>
         </div>
-        <div class="col-sm-12 col-md-6 text-right" *ngIf='!continueButtonInvisible'>
-          <button class="btn btn-block text-uppercase {{continueButtonClass}}" [routerLink]="'/order'">
-            {{continueButtonContent}}
+        <div
+          class="col-sm-12 col-md-6 text-right"
+          *ngIf="!continueButtonInvisible"
+        >
+          <button
+            class="btn btn-block text-uppercase cart-button {{
+              continueButtonClass
+            }}"
+            [routerLink]="'/order'"
+          >
+            {{ continueButtonContent }}
           </button>
         </div>
       </div>
