Improve order, admin, employee and main pages layout in context of mobile devices

--- a/src/app/modules/order/details/details.component.sass
+++ b/src/app/modules/order/details/details.component.sass
@@ -7,7 +7,7 @@
 .component-title
   margin-top: 1%
 
-.payment-form
+.details-form
   margin-top: 3%
 
 #input-delivery-date
@@ -32,3 +32,33 @@
 
 .continue-button
   float: right
+
+
+@media screen and (max-width: 767px)
+  .component-title
+    font-size: 1em
+  .details-form
+    font-size: 0.75em
+  .button>button
+    font-size: 0.9em
+    margin-top: 0.1em
+    margin-bottom: 0.1em
+    width: 100%
+  .date-picker
+    margin-bottom: 0.5em
+  .calendar
+    font-size: 0.9em
+  input
+    font-size: 0.85em
+
+@media (min-width: 768px) and (max-width: 991px)
+  .component-title
+    font-size: 1.2em
+
+@media (min-width: 991px) and (max-width: 1450px)
+  .component-title
+    font-size: 1.4em
+
+@media (min-width: 1451px) and (max-width: 1676px)
+  .component-title
+    font-size: 1.5em
