--- a/src/app/modules/profile/change-password/change-password.component.html
+++ b/src/app/modules/profile/change-password/change-password.component.html
@@ -1,48 +1,78 @@
-<form class="accountForm" name="form" #f="ngForm" (ngSubmit)="f.form.valid && updatePassword()">
-
+<form
+  class="accountForm"
+  name="form"
+  #f="ngForm"
+  (ngSubmit)="f.form.valid && updatePassword()"
+>
   <div class="form-group">
     <label for="passwordOld">Current Password</label>
-    <input type="password"
-           class="form-control"
-           id="passwordOld"
-           name="passwordOld"
-           [(ngModel)]="model.currentPassword"
-           #password="ngModel"
-           required>
-	<div class="text-danger" *ngIf="f.submitted && password.invalid"> Password can not be empty</div>
+    <input
+      type="password"
+      class="form-control"
+      id="passwordOld"
+      name="passwordOld"
+      [(ngModel)]="model.currentPassword"
+      #password="ngModel"
+      required
+    />
+    <div
+      class="text-danger validation-error"
+      *ngIf="f.submitted && password.invalid"
+    >
+      Password can not be empty
+    </div>
   </div>
 
-	<div class="form-group">
+  <div class="form-group">
     <label for="newPassword">New password</label>
-    <input type="password"
-           class="form-control"
-           id="newPassword"
-           name="newPassword"
-           [(ngModel)]="model.newPassword"
-           #newPass="ngModel"
-		   required minlength="8" pattern="(?=.*?[0-9])(?=.*?[A-Z]).+">
-		<div class="text-danger" *ngIf="f.submitted && newPass.invalid">
-			<div *ngIf="newPass.errors.required" >Password can not be empty </div>
-			<div *ngIf="newPass.errors.minlength">Minimum 8 characters </div>
-			<div *ngIf="newPass.errors.pattern">Minimum one digit and one upper case character required</div>
-			<div *ngIf="newPass.errors.invalid">Password is not valid </div>
+    <input
+      type="password"
+      class="form-control"
+      id="newPassword"
+      name="newPassword"
+      [(ngModel)]="model.newPassword"
+      #newPass="ngModel"
+      required
+      minlength="8"
+      pattern="(?=.*?[0-9])(?=.*?[A-Z]).+"
+    />
+    <div class="text-danger" *ngIf="f.submitted && newPass.invalid">
+      <div class="validation-error" *ngIf="newPass.errors.required">
+        Password can not be empty
+      </div>
+      <div class="validation-error" *ngIf="newPass.errors.minlength">
+        Minimum 8 characters
+      </div>
+      <div class="validation-error" *ngIf="newPass.errors.pattern">
+        Minimum one digit and one upper case character required
+      </div>
+      <div class="validation-error" *ngIf="newPass.errors.invalid">
+        Password is not valid
+      </div>
     </div>
-    </div>
-
-	  <div class="form-group">
-    <label for="newPassConfirm">Confirm the new password</label>
-    <input type="password"
-           class="form-control"
-           id="newPassConfirm"
-           name="newPassConfirm"
-           [(ngModel)]="model.newPasswordConfirmation"
-           #confirmNewPass="ngModel"
-           required appMatchString="{{model.newPassword}}">
-    <div class="text-danger" *ngIf="f.submitted && confirmNewPass.invalid">
-      Must match the new password
-   </div>
   </div>
 
-  <button type="submit" class="btn btn-success submit-button w-100">Update</button>
+  <div class="form-group">
+    <label for="newPassConfirm">Confirm the new password</label>
+    <input
+      type="password"
+      class="form-control"
+      id="newPassConfirm"
+      name="newPassConfirm"
+      [(ngModel)]="model.newPasswordConfirmation"
+      #confirmNewPass="ngModel"
+      required
+      appMatchString="{{ model.newPassword }}"
+    />
+    <div
+      class="text-danger validation-error"
+      *ngIf="f.submitted && confirmNewPass.invalid"
+    >
+      Must match the new password
+    </div>
+  </div>
 
+  <button type="submit" class="btn btn-success submit-button w-100">
+    Update
+  </button>
 </form>
