--- a/src/app/modules/profile/manage-details/manage-details.component.html
+++ b/src/app/modules/profile/manage-details/manage-details.component.html
@@ -1,21 +1,35 @@
-<form class="accountForm" name="form" #f="ngForm" (ngSubmit)="f.form.valid && updateInformations()">
-  <div class="form-group account-details-form">
+<form
+  class="details-form"
+  name="form"
+  #f="ngForm"
+  (ngSubmit)="f.form.valid && updateInformations()"
+>
+  <div class="form-group details-form-content">
     <label for="RegisterEmail">Email address</label>
-    <input type="email"
-          class="form-control"
-          id="RegisterEmail"
-          aria-describedby="RegisterEmailHelp"
-          name="email"
-          [(ngModel)]="model.email"
-          #email="ngModel"
-          [ngClass]="{ 'is-invalid': f.submitted && email.invalid }"
-          required email />
+    <input
+      type="email"
+      class="form-control"
+      id="RegisterEmail"
+      aria-describedby="RegisterEmailHelp"
+      name="email"
+      [(ngModel)]="model.email"
+      #email="ngModel"
+      [ngClass]="{ 'is-invalid': f.submitted && email.invalid }"
+      required
+      email
+    />
     <div>
       <div class="text-danger" *ngIf="f.submitted && email.invalid">
-        <div *ngIf="email.errors.required"> Email can not be empty </div>
-        <div *ngIf="email.errors.email"> Email is not valid </div>
+        <div class="validation-error" *ngIf="email.errors.required">
+          Email can not be empty
+        </div>
+        <div class="validation-error" *ngIf="email.errors.email">
+          Email is not valid
+        </div>
+      </div>
     </div>
   </div>
-  </div>
-  <button type="submit" class="btn btn-success submit-button w-100">Submit</button>
+  <button type="submit" class="btn btn-success submit-button w-100">
+    Submit
+  </button>
 </form>
