--- a/src/app/modules/admin/admin.component.html
+++ b/src/app/modules/admin/admin.component.html
@@ -1,7 +1,15 @@
-<div class="nav flex-column nav-pills profile-navigator " role="tablist" aria-orientation="vertical">
-  <a class="nav-link border border-success" [routerLink] = "['admin']" routerLinkActive="active bg-success border-dark">Test Admin</a>
+<div
+  class="nav flex-column nav-pills navigator"
+  role="tablist"
+  aria-orientation="vertical"
+>
+  <a
+    class="nav-link border border-success"
+    [routerLink]="['admin']"
+    routerLinkActive="active bg-success border-dark"
+    >Test Admin</a
+  >
 </div>
-
 
 <div class="d-flex justify-content-center profile-container">
   <router-outlet></router-outlet>
