--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,41 +1,97 @@
-
-<div class="text-center text-justify">
-  <h2> First invokation of this application requests can take some times as Heroku hosting have to wake up backend and database containers each time.</h2>
+<div class="component-title text-center text-justify">
+  <h2>
+    First invocation of this application requests can take some times as Heroku
+    hosting have to wake up backend and database containers each time.
+  </h2>
 </div>
-<br>
-<div class="text-center text-justify">
+<br />
+<div class="component-under-text text-center text-justify">
   <b>Work in progress</b>
 </div>
-<br>
-<hr class="solid"/>
-<br>
-<div>
+<br />
+<hr class="solid" />
+<br />
+<div class="planned-features">
   <p><b>Planned features:</b></p>
   <ul>
-    <li><s><b>[ADMIN/EMPLOYEE/CUSTOMER]</b> Main application layout - Navigators/Footers/Context menus </s></li>
-    <li><s><b>[ADMIN/EMPLOYEE/CUSTOMER]</b> Account creation/modification/authorization *JWT Token*</s></li>
-    <li><s><b>[CUSTOMER]</b> Order displaying with pagination - both for authorized and non authorized users</s></li>
-    <li><s><b>[CUSTOMER]</b> Shopping cart - product adding and displaying</s></li>
-    <li><s><b>[CUSTOMER]</b> Order placing (step by step approach) and displaying for customer</s></li>
-    <li><s><b>[CUSTOMER]</b> Check for unfinished orders, allowing user to finish it placement at any given time</s></li>
-    <li><b>[ADMIN/EMPLOYEE/CUSTOMER]</b> Product image url storing in database and external image hosting service/upload</li>
-    <li><b>[CUSTOMER]</b> Bouquets with pre existing templates offered by shop</li>
-    <li><b>[CUSTOMER]</b> Bouquet customizer, allowing customer to make changes to existing bouquest or create new ones from scratch</li>
-    <li><b>[CUSTOMER]</b> Order Delivery with delivery fee calculation (maybe using some sort of map, or existing api)</li>
+    <li>
+      <s
+        ><b>[ADMIN/EMPLOYEE/CUSTOMER]</b> Main application layout -
+        Navigators/Footers/Context menus
+      </s>
+    </li>
+    <li>
+      <s
+        ><b>[ADMIN/EMPLOYEE/CUSTOMER]</b> Account
+        creation/modification/authorization *JWT Token*</s
+      >
+    </li>
+    <li>
+      <s
+        ><b>[CUSTOMER]</b> Order displaying with pagination - both for
+        authorized and non authorized users</s
+      >
+    </li>
+    <li>
+      <s><b>[CUSTOMER]</b> Shopping cart - product adding and displaying</s>
+    </li>
+    <li>
+      <s
+        ><b>[CUSTOMER]</b> Order placing (step by step approach) and displaying
+        for customer</s
+      >
+    </li>
+    <li>
+      <s
+        ><b>[CUSTOMER]</b> Check for unfinished orders, allowing user to finish
+        it placement at any given time</s
+      >
+    </li>
+    <li>
+      <s
+        ><b>[ADMIN/EMPLOYEE/CUSTOMER]</b> Product image url storing in database
+        and external image hosting service/upload</s
+      >
+    </li>
+    <li>
+      <s
+        ><b>[ADMIN/EMPLOYEE/CUSTOMER]</b> Website is accessible from mobile
+        phones (Responsive web design)</s
+      >
+    </li>
+    <li>
+      <b>[CUSTOMER]</b> Bouquets with pre existing templates offered by shop
+    </li>
+    <li>
+      <b>[CUSTOMER]</b> Bouquet customizer, allowing customer to make changes to
+      existing bouquest or create new ones from scratch
+    </li>
+    <li>
+      <b>[CUSTOMER]</b> Order Delivery with delivery fee calculation (maybe
+      using some sort of map, or existing api)
+    </li>
     <li><b>[ADMIN]</b> Admin page - modyfing user privileges, etc.</li>
-    <li><b>[EMPLOYEE]</b> Employee page - looking into currently existing orders, updating their status</li>
-    <li><b>[ADMIN/EMPLOYEE/CUSTOMER]</b> Anti scrippting features - API protection</li>
-    <li><b>[CUSTOMER]</b> Main page shop presentation (Maybe carousel with banners/promotions, etc?)</li>
+    <li>
+      <b>[EMPLOYEE]</b> Employee page - looking into currently existing orders,
+      updating their status
+    </li>
+    <li>
+      <b>[ADMIN/EMPLOYEE/CUSTOMER]</b> Anti scrippting features - API protection
+    </li>
+    <li>
+      <b>[CUSTOMER]</b> Main page shop presentation (Maybe carousel with
+      banners/promotions, etc?)
+    </li>
     <li><b>[ADMIN/EMPLOYEE]</b> Content management system</li>
     <li><b>[ADMIN/EMPLOYEE/CUSTOMER]</b> Built-in messaging system</li>
   </ul>
 </div>
-<br>
-<hr class="solid"/>
-<br>
-<div class="container">
-  <p class="row"><b>Currently used technologies:</b></p>
-  <div class="row">
+<br />
+<hr class="solid" />
+<br />
+<div class="container used-technologies">
+  <p class="row used-technologies-title"><b>Currently used technologies:</b></p>
+  <div class="row used-technologies-content">
     <div class="col-6">
       <label><b>Front End</b></label>
       <ul>
@@ -57,7 +113,7 @@
       </ul>
     </div>
   </div>
-  <div class="row">
+  <div class="row used-technologies-content">
     <div class="col-12">
       <label><b>Other</b></label>
       <ul>
@@ -69,5 +125,3 @@
     </div>
   </div>
 </div>
-
-
