--- a/src/app/modules/order/delivery-address/delivery-address.component.sass
+++ b/src/app/modules/order/delivery-address/delivery-address.component.sass
@@ -32,11 +32,14 @@
   .component-title
     font-size: 1em
   .delivery-address-form
-    font-size: 0.8em
+    font-size: 0.75em
   .button>button
+    font-size: 0.9em
     margin-top: 0.1em
     margin-bottom: 0.1em
     width: 100%
+  input
+    font-size: 0.85em
 
 @media (min-width: 768px) and (max-width: 991px)
   .component-title
