--- a/src/app/modules/profile/delete/delete.component.html
+++ b/src/app/modules/profile/delete/delete.component.html
@@ -1,17 +1,30 @@
-<form class="accountForm" name="form" #f="ngForm" (ngSubmit)="f.form.valid && deleteAccount()">
-
+<form
+  class="accountForm"
+  name="form"
+  #f="ngForm"
+  (ngSubmit)="f.form.valid && deleteAccount()"
+>
   <div class="form-group">
     <label for="passwordInput">Password</label>
-    <input type="password"
-           class="form-control"
-           id="passwordInput"
-           [(ngModel)]="modelPassword"
-           name="password"
-           #password="ngModel"
-           required>
+    <input
+      type="password"
+      class="form-control"
+      id="passwordInput"
+      [(ngModel)]="modelPassword"
+      name="password"
+      #password="ngModel"
+      required
+    />
     <div>
-      <div class="text-danger" *ngIf="f.submitted && password.invalid"> Password can not be empty</div>
+      <div
+        class="text-danger validation-error"
+        *ngIf="f.submitted && password.invalid"
+      >
+        Password can not be empty
+      </div>
     </div>
   </div>
-  <button type="submit" class="btn btn-success submit-button w-100">Delete</button>
+  <button type="submit" class="btn btn-success submit-button w-100">
+    Delete
+  </button>
 </form>
