--- a/src/app/modules/admin/account-administration/account-administration.component.sass
+++ b/src/app/modules/admin/account-administration/account-administration.component.sass
@@ -1,16 +1,25 @@
 ngb-pagination ::ng-deep ul > li.active > a
     background-color: #1e7e34 !important
     
-thead
+.thead
   color: white
   background-color: #1e7e34 !important
 
-tr
-    cursor: pointer
-   
+.table-content
+    min-width: max-content
+
+.input-price
+    display: inline-block
+    width: 10em
+
+.input-currency   
+    display: inline-block
+    width: 5em
+
 @media screen and (max-width: 767px)
     .table-content
         font-size: 0.55rem
+        min-width: max-content
     .table-content>tbody>tr>td
         padding: 2.5px
     .table-content>thead>tr>th
@@ -19,10 +28,13 @@ tr
         padding: .25rem .5rem
         font-size: .875rem
         line-height: 1.5
+    input
+        font-size: 0.55rem
 
 @media (min-width: 768px) and (max-width: 991px)
     .table-content
         font-size: 0.65rem
+        min-width: max-content
     .table-content>tbody>tr>td
         padding: 4px
     .table-content>thead>tr>th
@@ -35,6 +47,7 @@ tr
 @media (min-width: 991px) and (max-width: 1450px)
     .table-content
         font-size: 0.9rem
+        min-width: max-content
     .table-content>tbody>tr>td
         padding: 8px
     .table-content>thead>tr>th
@@ -47,6 +60,7 @@ tr
 @media (min-width: 1451px) and (max-width: 1676px)
     .table-content
         font-size: 0.9rem
+        min-width: max-content
     .table-content>tbody>tr>td
         padding: 8px
     .table-content>thead>tr>th
@@ -60,6 +74,7 @@ tr
 @media screen and (min-width: 1677px)
     .table-content
         font-size: 1rem
+        min-width: max-content
     .table-content>tbody>tr>td
         padding: 12px
     .table-content>thead>tr>th
