Add small adjustment to order-details component layout, auto indent summary component

--- a/src/app/modules/employee/order-administration/order-details/order-details.component.sass
+++ b/src/app/modules/employee/order-administration/order-details/order-details.component.sass
@@ -59,7 +59,7 @@
   #payment-type
     width: fit-content
     font-size: 0.95em
-  input
+  input, textarea
     font-size: 0.85em
 
 @media (min-width: 768px) and (max-width: 991px)
